--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install codecov
 
 script:
-  - coverage run tests.py
+  - nosetests --cover-package=pilight --with-coverage
 
 after_success:
   - codecov
