ever closer to packaging

--- a/init/pilight.service
+++ b/init/pilight.service
@@ -6,7 +6,7 @@ After=syslog.target network-online.target
 Type=simple
 User=root
 EnvironmentFile=/etc/default/pilight
-ExecStart=/home/ricky/auto/pilight_web.py
+ExecStart=/usr/local/bin/pilight
 Restart=on-failure
 RestartSec=10
 KillMode=process
